--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 This file was created by IntelliJ IDEA 12.1.5 for binding GitHub repository
 
+Удаление или редактирование пользователей пока не работает.
