--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 This file was created by IntelliJ IDEA 12.1.5 for binding GitHub repository
 
+Реализовано: Вывод таблицы пользователей. Получение списка пользователей осуществляется через REST server
+
 Удаление или редактирование пользователей пока не работает.
